@@ -1,3 +1,9 @@
+2004-06-22  Theodore A. Roth  <troth@openavr.org>
+
+	* xml/Atmel2libc.py: Now dumps header, memory size info and interrupts
+	data as well-formed XML.
+	* xml/Device.dtd: Change memory info to memory sizes.
+
 2004-06-21  Theodore A. Roth  <troth@openavr.org>
 
 	* xml/Atmel2libc.py: New file.
